--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@supabase/ssr": "^0.3.0",
+    "@tailwindcss/forms": "^0.5.7",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
