--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.19",
+    "@heroicons/react": "^2.1.3",
     "@supabase/ssr": "^0.3.0",
     "@tailwindcss/forms": "^0.5.7",
     "next": "14.2.3",
