--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.19",
+    "@headlessui/tailwindcss": "^0.2.0",
     "@heroicons/react": "^2.1.3",
+    "@remixicon/react": "^4.2.0",
     "@supabase/ssr": "^0.3.0",
-    "@tailwindcss/forms": "^0.5.7",
+    "@tremor/react": "^3.16.2",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
