--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@google-cloud/bigquery": "^7.6.1",
     "@headlessui/react": "^1.7.19",
     "@headlessui/tailwindcss": "^0.2.0",
     "@heroicons/react": "^2.1.3",
@@ -18,7 +19,8 @@
     "@tremor/react": "^3.16.2",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwind-datepicker-react": "^1.4.3"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
