--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "@remixicon/react": "^4.2.0",
     "@supabase/ssr": "^0.3.0",
     "@tremor/react": "^3.16.2",
+    "dayjs": "^1.11.11",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind-datepicker-react": "^1.4.3"
+    "react-tailwindcss-datepicker": "^1.6.6"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
