--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "tsc": "tsc"
   },
   "dependencies": {
     "@google-cloud/bigquery": "^7.6.1",
