--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@heroicons/react": "^2.1.3",
     "@remixicon/react": "^4.2.0",
     "@supabase/ssr": "^0.3.0",
+    "@tanstack/react-table": "^8.17.3",
     "@tremor/react": "^3.16.2",
     "dayjs": "^1.11.11",
     "next": "14.2.3",
