--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@heroicons/react": "^2.1.3",
     "@remixicon/react": "^4.2.0",
     "@supabase/ssr": "^0.3.0",
+    "@tanstack/react-query": "^5.49.2",
     "@tanstack/react-table": "^8.17.3",
     "@tremor/react": "^3.16.2",
     "dayjs": "^1.11.11",
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
+    "@tanstack/eslint-plugin-query": "^5.50.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
