--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@headlessui/react": "^1.7.19",
     "@headlessui/tailwindcss": "^0.2.0",
     "@heroicons/react": "^2.1.3",
+    "@radix-ui/react-tooltip": "^1.1.2",
     "@remixicon/react": "^4.2.0",
     "@supabase/ssr": "^0.3.0",
     "@tanstack/react-query": "^5.49.2",
