--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tremor/react": "^3.16.2",
     "dayjs": "^1.11.11",
     "next": "14.2.3",
+    "nextjs-toploader": "^1.6.12",
     "react": "^18",
     "react-dom": "^18",
     "react-tailwindcss-datepicker": "^1.6.6"
