--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tanstack/react-table": "^8.17.3",
     "@tremor/react": "^3.16.2",
     "dayjs": "^1.11.11",
+    "dotenv": "^16.4.5",
     "next": "14.2.3",
     "nextjs13-progress": "^1.3.3",
     "react": "^18",
