--- a/package.json
+++ b/package.json
@@ -20,14 +20,18 @@
     "@supabase/ssr": "^0.3.0",
     "@tanstack/react-query": "^5.49.2",
     "@tanstack/react-table": "^8.17.3",
-    "@tremor/react": "^3.16.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.11",
     "dotenv": "^16.4.5",
+    "lucide-react": "^0.407.0",
     "next": "14.2.3",
     "nextjs13-progress": "^1.3.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-tailwindcss-datepicker": "^1.6.6"
+    "react-tailwindcss-datepicker": "^1.6.6",
+    "tailwind-merge": "^2.4.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
